# ib_trading_bot_cpp_2

./: .env.example  .gitignore  USER.md  backtest_full.py  build.sh  build_2023.py  config.py  dashboard.py  fetch_premarket_test.py  health_check.py  llm_confidence.py  ml_integration.py  premarket_briefing.py  premarket_session_runner.py  requirements.txt  setup_db.py  strategy.py  telegram_notifier.py  test_connection.py  trade_quality_gate.py  trader.py
cpp/: CMakeLists.txt
cpp/include/: trading_engine.h
cpp/src/: bindings.cpp  indicators.cpp  signals.cpp
